<resources>
    <string name="app_name">Baby Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_text">Home</string>
    <string name="first_onboarding_title">Track Your Baby\'s Activities with Ease</string>
    <string name="first_onboarding_description">Get started with tracking your baby\'s feedings, diaper changes, sleep patterns, and more...</string>
    <string name="onboarding_button_text">Next</string>
    <string name="second_onboarding_title">Stay Connected with Caregivers</string>
    <string name="second_onboarding_description">Share access to your baby\'s tracker with family members, babysitters, or healthcare providers</string>
    <string name="home_feeding_button_text">Feeding</string>
    <string name="home_sleeping_button_text">Sleep</string>
    <string name="home_symptoms_button_text">Symptoms</string>
    <string name="woke_up_hint">Woke Up</string>
    <string name="fell_sleep_hint">Fell Sleep</string>
    <string name="note_hint">Note</string>
    <string name="button_save_text">Save</string>
    <string name="string_all">All</string>
    <string name="calender_text">Calender</string>
    <string name="feeding_time_text">Time</string>
    <string name="feeding_amount_text">Amount (ml)</string>
    <string name="symptoms_text">Symptoms</string>
    <string name="feeding_text">Feeding</string>
    <string name="symptom_time_hint">Symptom Time</string>
    <string name="symptoms_hint">Symptoms</string>
    <string name="save_text">Save</string>
    <string name="runny_nose">Runny Nose</string>
    <string name="heartburn">Heartburn</string>
    <string name="no_appetite">No Appetite</string>
    <string name="rush">Rush</string>
    <string name="low_energy">Low Energy</string>
    <string name="nausea">Nausea</string>
    <string name="cough">Cough</string>
    <string name="fever">Fever</string>
    <string name="sleeping_all_list_text">Sleeping</string>
    <string name="symptoms_all_list_text">Symptoms</string>
    <string name="feeding_all_list_text">Feeding</string>
    <string name="rate_us_text">Rate Us</string>
    <string name="term_of_use_text">Term of Use</string>
    <string name="privacy_policy_text">Privacy Policy</string>
    <string name="contact_us_text">Contact Us</string>
    <string name="restore_purchase_text">Restore Purchase</string>
    <string name="saved_text">Saved</string>
    <string name="get_premium_text">Get Premium</string>
    <string name="share_the_care_text">Share the care</string>
    <string name="all_in_one_baby_tracker_text">All-in-one baby tracker</string>
    <string name="inapp_annual_text">Annual</string>
    <string name="inapp_price_text">$30</string>
    <string name="in_app_button_text">Start</string>
    <string name="in_app_term_of_user">Terms of Use</string>
    <string name="in_app_restore_purchase_text">Restore Purchase</string>
    <string name="in_app_privacy_policy_text">Privacy Policy</string>
    <string name="setting_page_title">Settings</string>
    <string name="calender_date_text">Tarih</string>
</resources>