<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.symptom.SymptomsPageFragment"
    android:background="@color/white">


    <TextView
        android:id="@+id/symptomsTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="9dp"
        android:fontFamily="@font/poppins"
        android:text="@string/symptoms_text"
        android:textColor="@color/title_color"
        android:textSize="@dimen/textSize5"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/symptomsBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        app:layout_constraintBottom_toBottomOf="@+id/symptomsTitleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/symptomsTitleTextView"
        app:srcCompat="@drawable/back_btn" />

    <View
        android:id="@+id/symptomTimeEditText"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="@dimen/margin27"
        android:layout_marginTop="32dp"
        android:background="@drawable/rectangle_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/symptomsTitleTextView" />

    <TextView
        android:id="@+id/tvSymptomsTime"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="20dp"
        android:background="@null"
        android:hint="@string/feeding_time_text"
        android:text=""
        android:textAppearance="@style/input"
        app:layout_constraintBottom_toBottomOf="@id/symptomTimeEditText"
        app:layout_constraintEnd_toEndOf="@id/symptomTimeEditText"
        app:layout_constraintStart_toStartOf="@id/symptomTimeEditText"
        app:layout_constraintTop_toTopOf="@+id/symptomTimeEditText" />

    <View
        android:id="@+id/vSymptoms"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="@dimen/margin27"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_edittext_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/symptomTimeEditText" />

    <TextView
        android:id="@+id/tvSymptoms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="20dp"
        android:background="@null"
        android:hint="@string/symptoms_hint"
        android:text=""
        android:maxLines="2"
        android:textAppearance="@style/input"
        app:layout_constraintBottom_toBottomOf="@id/vSymptoms"
        app:layout_constraintEnd_toEndOf="@id/vSymptoms"
        app:layout_constraintStart_toStartOf="@id/vSymptoms"
        app:layout_constraintTop_toTopOf="@+id/vSymptoms" />

    <ImageView
        android:id="@+id/imgRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:src="@drawable/symptoms_btn"
        app:layout_constraintBottom_toBottomOf="@id/vSymptoms"
        app:layout_constraintEnd_toEndOf="@id/vSymptoms"
        app:layout_constraintTop_toTopOf="@id/vSymptoms" />

    <EditText
        android:id="@+id/noteEditText"
        android:layout_width="0dp"
        android:layout_height="264dp"
        android:layout_marginHorizontal="@dimen/margin27"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_edittext_background"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:gravity="top|start"
        android:hint="@string/note_hint"
        android:inputType="textMultiLine"
        android:padding="@dimen/padding3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vSymptoms" />

    <Button
        android:id="@+id/symptomsSaveButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/save_button_height"
        android:layout_marginHorizontal="@dimen/margin27"
        android:text="@string/button_save_text"
        android:visibility="gone"
        android:textSize="@dimen/textSize4"
        android:background="@drawable/onboarding_button"
        app:backgroundTint="@null"
        android:layout_marginBottom="@dimen/margin20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/loadingScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#825E5E5E"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/savedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saved_text"
        android:textAppearance="@style/saved"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>