<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.feeding.FeedingPageFragment"
    android:background="@color/white">


    <TextView
        android:id="@+id/feedingTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="9dp"
        android:fontFamily="@font/poppins"
        android:text="@string/feeding_text"
        android:textColor="@color/title_color"
        android:textSize="@dimen/textSize5"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/feedingBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"

        app:layout_constraintBottom_toBottomOf="@+id/feedingTitleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/feedingTitleTextView"
        app:srcCompat="@drawable/back_btn" />

    <View
        android:id="@+id/feedingTimeEditText"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rectangle_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedingTitleTextView" />

    <TextView
        android:id="@+id/tvFeedingTime"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="20dp"
        android:background="@null"
        android:hint="Time"
        android:text=""
        android:textAppearance="@style/input"
        app:layout_constraintBottom_toBottomOf="@id/feedingTimeEditText"
        app:layout_constraintEnd_toEndOf="@id/feedingTimeEditText"
        app:layout_constraintStart_toStartOf="@id/feedingTimeEditText"
        app:layout_constraintTop_toTopOf="@+id/feedingTimeEditText" />


    <EditText
        android:id="@+id/feedingAmountEditText"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="@dimen/margin18"
        android:layout_marginTop="@dimen/margin10"
        android:background="@drawable/custom_edittext_background"
        android:ems="10"
        android:hint="@string/feeding_amount_text"
        android:inputType="number"
        android:padding="@dimen/padding3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedingTimeEditText" />

    <EditText
        android:id="@+id/feedingnoteEditText"
        android:layout_width="0dp"
        android:layout_height="264dp"
        android:layout_marginHorizontal="@dimen/margin18"
        android:layout_marginTop="@dimen/margin10"
        android:background="@drawable/custom_edittext_background"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:gravity="top|start"
        android:hint="@string/note_hint"
        android:inputType="textMultiLine"
        android:padding="@dimen/padding3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedingAmountEditText" />


    <Button
        android:id="@+id/feedingSaveButton"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginHorizontal="@dimen/margin18"
        android:text="@string/button_save_text"
        android:textSize="@dimen/textSize4"
        android:visibility="gone"
        android:background="@drawable/onboarding_button"
        app:backgroundTint="@null"
        android:layout_marginBottom="@dimen/margin20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/loadingScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#825E5E5E"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/savedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saved_text"
        android:textAppearance="@style/saved"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>